docs: update music segmentation example

--- a/docs/examples/music-segmentation.ipynb
+++ b/docs/examples/music-segmentation.ipynb
@@ -11,26 +11,23 @@
     "## Introduction\n",
     "\n",
     "Music segmentation can be seen as a change point detection task and therefore can be carried out with `ruptures`.\n",
-    "Roughly, it consists of finding the temporal boundaries of homogeneous segments, e.g. the intro, verse, chorus and outro in a song.\n",
+    "Roughly, it consists in finding the temporal boundaries of homogeneous segments, e.g. the intro, verse, chorus and outro in a song.\n",
     "\n",
     "The adopted approach is summarized as follows:\n",
     "\n",
-    "- the original sound is transformed into an informative (multivariate) representaion;\n",
+    "- the original sound is transformed into an informative (multivariate) representation;\n",
     "- mean shifts are detected in this new representation using a dynamic programming approach.\n",
     "\n",
-    "In this example, we try two representations which are well-known in the sound and music processing community:\n",
+    "In this example, we use the well-known tempogram representation, which is based on the onset strength envelope of the input signal, and captures the tempo spectrum [[Grosche2010]](Grosche2010).\n",
     "\n",
-    "- a chromagram, that maps the input signal into a 12 features space representing the classical 12 pitch classes;\n",
-    "- a tempogram computed based on the onset strength envelope of the input signal, that captures the tempo spectrum.\n",
-    "\n",
-    "To load and manipulate sound data, we use the [librosa package](https://librosa.org/doc/latest/index.html)."
+    "To load and manipulate sound data, we use the [librosa package](https://librosa.org/doc/latest/index.html) [[McFee2015]](McFee2015)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup\n",
+    "### Setup\n",
     "\n",
     "First, we make the necessary imports."
    ]
@@ -41,8 +38,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from itertools import chain, product\n",
-    "\n",
     "import librosa\n",
     "import librosa.display\n",
     "import matplotlib.pyplot as plt\n",
@@ -55,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also define a few utility functions."
+    "We can also define a utility function."
    ]
   },
   {
@@ -73,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load the data\n",
+    "### Load the data\n",
     "\n",
     "A number of music files are available in [Librosa](https://librosa.org/doc/latest/index.html).\n",
     "See [here](https://librosa.org/doc/latest/recordings.html#description-of-examples) for a complete list.\n",
@@ -106,49 +101,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Transform the signal\n",
+    "## Signal segmentation\n",
     "\n",
-    "### Chromagram"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Number of samples between successive chroma frames\n",
-    "hop_length = 128\n",
-    "# Number of chroma bins to produce\n",
-    "n_chroma = 12\n",
-    "# Compute the chromagram\n",
-    "chromagram = librosa.feature.chroma_cqt(\n",
-    "    y=signal, sr=sampling_rate, hop_length=hop_length, n_chroma=n_chroma\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = fig_ax()\n",
-    "_ = librosa.display.specshow(\n",
-    "    chromagram,\n",
-    "    ax=ax,\n",
-    "    x_axis=\"s\",\n",
-    "    y_axis=\"chroma\",\n",
-    "    hop_length=hop_length,\n",
-    "    sr=sampling_rate,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Tempogram"
+    "### Transform the signal into a tempogram"
    ]
   },
   {
@@ -158,30 +113,24 @@
    "outputs": [],
    "source": [
     "# Compute the onset strength\n",
-    "hop_length = 256\n",
-    "oenv = librosa.onset.onset_strength(y=signal, sr=sampling_rate, hop_length=hop_length)\n",
+    "hop_length_tempo = 256\n",
+    "oenv = librosa.onset.onset_strength(\n",
+    "    y=signal, sr=sampling_rate, hop_length=hop_length_tempo\n",
+    ")\n",
     "tempogram = librosa.feature.tempogram(\n",
     "    onset_envelope=oenv,\n",
     "    sr=sampling_rate,\n",
-    "    hop_length=hop_length,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    hop_length=hop_length_tempo,\n",
+    ")\n",
+    "# Display the tempogram\n",
     "fig, ax = fig_ax()\n",
     "_ = librosa.display.specshow(\n",
     "    tempogram,\n",
     "    ax=ax,\n",
-    "    hop_length=hop_length,\n",
+    "    hop_length=hop_length_tempo,\n",
     "    sr=sampling_rate,\n",
     "    x_axis=\"s\",\n",
     "    y_axis=\"tempo\",\n",
-    "    cmap=\"magma\",\n",
     ")"
    ]
   },
@@ -189,7 +138,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Signal segmentation"
+    "### Choice of the detection algorithm\n",
+    "\n",
+    "We choose to detect changes in the mean of the tempogram, which is a multivariate signal.\n",
+    "This amounts to selecting the $L_2$ cost function (see [CostL2](../../user-guide/costs/costl2)).\n",
+    "To that end, two methods are available in `ruptures`:\n",
+    "\n",
+    "- `rpt.Dynp(model=\"l2\")`\n",
+    "- `rpt.KernelCPD(kernel=\"linear\")`\n",
+    "\n",
+    "Both will return the same results but the latter is implemented in C and therefore significatively faster.\n",
+    "\n",
+    "### Choice of the number of changes\n",
+    "In order to choose the number of change points, we use the elbow method.\n",
+    "In the change point detection setting, this heuritic consists in:\n",
+    "\n",
+    "- plotting the sum of costs for 1, 2,...,$K_{\\text{max}}$ change points,\n",
+    "- picking the number of changes at the \"elbow\" of the curve.\n",
+    "\n",
+    "Here, we set $K_{\\text{max}}$:=20.\n",
+    "\n",
+    "!!! note\n",
+    "    In `rpt.Dynp` and `rpt.KernelCPD`, whenever a segmentation with $K$ changes is computed, all segmentations with 1,2,..., $K-1$ are also computed and stored.\n",
+    "    Indeed, thanks to the dynamic programming approach, segmentations with less changes are avalaible for free as intermediate calculations.\n",
+    "    Therefore, users who need to compute segmentations with several numbers of changes should start with the one with the most changes.\n",
+    "\n",
+    "In addition, note that, in `ruptures`, the sum of costs of a segmentation defined by a set of change points `bkps` can easily be computed using:\n",
+    "\n",
+    "```python\n",
+    "algo = rpt.KernelCPD(kernel=\"linear\").fit(signal)\n",
+    "algo.cost.sum_of_costs(bkps)\n",
+    "```\n",
+    "(Replace `rpt.KernelCPD` by the algorithm you are actually using, if different.)\n",
+    "\n"
    ]
   },
   {
@@ -198,7 +179,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chromagram.T.shape"
+    "# Choose detection method\n",
+    "algo = rpt.KernelCPD(kernel=\"linear\").fit(tempogram.T)\n",
+    "\n",
+    "# Choose the number of changes (elbow heuristic)\n",
+    "n_bkps_max = 20  # K_max\n",
+    "# Start by computing the segmentation with most changes.\n",
+    "# After start, all segmentations with 1, 2,..., K_max-1 changes are available for free\n",
+    "_ = algo.predict(n_bkps_max)\n",
+    "\n",
+    "array_of_n_bkps = np.arange(1, n_bkps_max + 1)\n",
+    "\n",
+    "\n",
+    "def get_sum_of_cost(n_bkps):\n",
+    "    bkps = algo.predict(n_bkps=n_bkps)\n",
+    "    return algo.cost.sum_of_costs(bkps)\n",
+    "\n",
+    "\n",
+    "fig, ax = fig_ax((7, 4))\n",
+    "ax.plot(\n",
+    "    array_of_n_bkps,\n",
+    "    [get_sum_of_cost(n_bkps=n_bkps) for n_bkps in array_of_n_bkps],\n",
+    "    \"-*\",\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "ax.set_xticks(array_of_n_bkps)\n",
+    "ax.set_xlabel(\"Number of change points\")\n",
+    "ax.set_title(\"Sum of costs\")\n",
+    "ax.grid(axis=\"x\")\n",
+    "ax.set_xlim(0, n_bkps_max)\n",
+    "\n",
+    "# Visually we choose n_bkps=5 (highlighted in red on the elbow plot)\n",
+    "n_bkps = 5\n",
+    "_ = ax.scatter([5], [get_sum_of_cost(n_bkps=5)], color=\"r\", s=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Visually, we choose 5 change points** (highlighted in red on the elbow plot).\n",
+    "\n",
+    "We can now compute the segmentation of the tempogram, and display the results."
    ]
   },
   {
@@ -207,147 +229,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sigma = np.sqrt(chromagram.T.var(axis=0).mean())\n",
-    "n_samples, n_dims = chromagram.T.shape\n",
-    "pen_bic = 2 * sigma * sigma * np.log(n_samples) * (n_dims + 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "algo = rpt.KernelCPD(kernel=\"linear\").fit(chromagram.T.astype(float))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "algo = rpt.KernelCPD(kernel=\"linear\").fit(np.random.randn(1000, 12))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chromagram.astype(np.double).dtype"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bkps = algo.predict(pen=pen_bic)\n",
-    "print(bkps)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(\n",
-    "    range(1, 21), [algo.cost.sum_of_costs(algo.predict(k)) for k in range(1, 21)], \"*-\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Segmentation\n",
+    "bkps = algo.predict(n_bkps=n_bkps)\n",
+    "# Convert the estimated change points (frame counts) to actual timestamps\n",
+    "bkps_times = librosa.frames_to_time(bkps, sr=sampling_rate, hop_length=hop_length_tempo)\n",
+    "\n",
+    "# Displaying results\n",
     "fig, ax = fig_ax()\n",
     "_ = librosa.display.specshow(\n",
-    "    chromagram,\n",
+    "    tempogram,\n",
     "    ax=ax,\n",
     "    x_axis=\"s\",\n",
-    "    y_axis=\"chroma\",\n",
-    "    hop_length=hop_length,\n",
+    "    y_axis=\"tempo\",\n",
+    "    hop_length=hop_length_tempo,\n",
     "    sr=sampling_rate,\n",
     ")\n",
     "\n",
-    "bkps_times = librosa.frames_to_time(bkps, sr=sampling_rate, hop_length=hop_length)\n",
     "for b in bkps_times[:-1]:\n",
     "    ax.axvline(b, ls=\"--\", color=\"white\", lw=4)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def plot_util(\n",
-    "    rpt_bkps,\n",
-    "    feature,\n",
-    "    sampling_rate,\n",
-    "    hop_length,\n",
-    "    y_axis,\n",
-    "    vline_min,\n",
-    "    vline_max,\n",
-    "    ax,\n",
-    "    title,\n",
-    "):\n",
-    "    # Make the break points \"compatible\" with librosa api\n",
-    "    # it expects index 0 and not index of the last point\n",
-    "    rpt_bkps.pop(-1)\n",
-    "    rpt_bkps = [0] + rpt_bkps\n",
-    "    # Translate index in the chromagram to time index in the original soundtrack\n",
-    "    rpt_bpks_times = librosa.frames_to_time(rpt_bkps, sr=sampling_rate)\n",
-    "    # Plot\n",
-    "    librosa.display.specshow(\n",
-    "        chromagram, y_axis=\"chroma\", x_axis=\"time\", ax=axs[idx], hop_length=hop_length\n",
-    "    )\n",
-    "    axs[idx].vlines(\n",
-    "        rpt_bpks_times,\n",
-    "        0,\n",
-    "        chromagram.shape[0],\n",
-    "        color=\"linen\",\n",
-    "        linestyle=\"--\",\n",
-    "        linewidth=1.5,\n",
-    "        alpha=0.9,\n",
-    "    )\n",
-    "    axs[idx].set(title=f\"Algo : {type(algo).__name__}, Cost : {cost}\")\n",
-    "    axs[idx].label_outer()\n",
-    "\n",
-    "\n",
-    "algo = rpt.BottomUp(model=\"l2\").fit(chromagram.T)\n",
-    "rpt_bkps = algo.predict(pen=50)\n",
-    "# Make the break points \"compatible\" with librosa api\n",
-    "# it expects index 0 and not index of the last point\n",
-    "rpt_bkps.pop(-1)\n",
-    "rpt_bkps = [0] + rpt_bkps\n",
-    "# Translate index in the chromagram to time index in the original soundtrack\n",
-    "rpt_bpks_times = librosa.frames_to_time(rpt_bkps, sr=sampling_rate)\n",
-    "# Plot\n",
-    "librosa.display.specshow(\n",
-    "    chromagram,\n",
-    "    y_axis=\"chroma\",\n",
-    "    x_axis=\"time\",\n",
-    "    ax=axs[n_plots - 1],\n",
-    "    hop_length=hop_length,\n",
-    ")\n",
-    "axs[n_plots - 1].vlines(\n",
-    "    rpt_bpks_times,\n",
-    "    0,\n",
-    "    chromagram.shape[0],\n",
-    "    color=\"linen\",\n",
-    "    linestyle=\"--\",\n",
-    "    linewidth=1.5,\n",
-    "    alpha=0.9,\n",
-    ")\n",
-    "axs[n_plots - 1].set(title=f\"Algo : {type(algo).__name__}, Cost : l2\")\n",
-    "axs[n_plots - 1].label_outer()"
+    "We can now listen to the homogeneous segments (from a tempo standpoint) between two change points."
    ]
   },
   {
@@ -356,114 +262,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We ask for 5 breaking points\n",
-    "n_bkps = 5\n",
+    "bkps_time_indexes = (sampling_rate * bkps_times).astype(int).tolist()\n",
     "\n",
-    "algos = [rpt.BottomUp, rpt.Binseg]\n",
-    "models = [\"l2\", \"l1\", \"rbf\"]  # \"l1\", \"rbf\", \"linear\", \"normal\", \"ar\"\n",
-    "kernelCPD_algos = [rpt.KernelCPD]\n",
-    "kernelCPD_kernels = [\"linear\", \"rbf\", \"cosine\"]\n",
-    "\n",
-    "model_objs = [(algo(model=model), model) for (algo, model) in product(algos, models)]\n",
-    "for (algo, kernel) in product(kernelCPD_algos, kernelCPD_kernels):\n",
-    "    model_objs.append((algo(kernel=kernel), kernel))\n",
-    "\n",
-    "n_plots = len(models) * len(algos) + len(kernelCPD_kernels) * len(kernelCPD_algos) + 3\n",
-    "fig, axs = plt.subplots(nrows=n_plots, sharex=True, figsize=(8, 20), dpi=150)\n",
-    "\n",
-    "times = librosa.times_like(oenv, sr=sampling_rate, hop_length=hop_length)\n",
-    "librosa.display.waveplot(y, sr=sampling_rate, ax=axs[0])\n",
-    "axs[0].set(title=\"nutcracker\")\n",
-    "axs[0].label_outer()\n",
-    "axs[1].plot(times, oenv, label=\"Onset strength\")\n",
-    "axs[1].label_outer()\n",
-    "axs[1].legend(frameon=True)\n",
-    "\n",
-    "for idx, (algo, cost) in zip(range(2, n_plots), model_objs):\n",
-    "    algo = algo.fit(tempogram.T)\n",
-    "    rpt_bkps = algo.predict(n_bkps=n_bkps)\n",
-    "    # Make the break points \"compatible\" with librosa api\n",
-    "    # it expects index 0 and not index of the last point\n",
-    "    rpt_bkps.pop(-1)\n",
-    "    rpt_bkps = [0] + rpt_bkps\n",
-    "    # Translate index in the chromagram to time index in the original soundtrack\n",
-    "    rpt_bpks_times = librosa.frames_to_time(rpt_bkps, sr=sampling_rate)\n",
-    "    # Plot\n",
-    "    librosa.display.specshow(\n",
-    "        tempogram,\n",
-    "        y_axis=\"tempo\",\n",
-    "        x_axis=\"time\",\n",
-    "        ax=axs[idx],\n",
-    "        hop_length=hop_length,\n",
-    "        sr=sampling_rate,\n",
-    "        cmap=\"magma\",\n",
-    "    )\n",
-    "    axs[idx].vlines(\n",
-    "        rpt_bpks_times, 16, 480, color=\"linen\", linestyle=\"--\", linewidth=1.5, alpha=0.9\n",
-    "    )\n",
-    "    axs[idx].set(title=f\"Algo : {type(algo).__name__}, Cost : {cost}\")\n",
-    "    axs[idx].label_outer()\n",
-    "\n",
-    "algo = rpt.BottomUp(model=\"l2\").fit(chromagram.T)\n",
-    "rpt_bkps = algo.predict(pen=50)\n",
-    "# Make the break points \"compatible\" with librosa api\n",
-    "# it expects index 0 and not index of the last point\n",
-    "# Translate index in the chromagram to time index in the original soundtrack\n",
-    "rpt_bpks_times = librosa.frames_to_time([0] + rpt_bkps[:-1], sr=sampling_rate)\n",
-    "# Plot\n",
-    "librosa.display.specshow(\n",
-    "    tempogram,\n",
-    "    y_axis=\"tempo\",\n",
-    "    x_axis=\"time\",\n",
-    "    ax=axs[n_plots - 1],\n",
-    "    hop_length=hop_length,\n",
-    "    sr=sampling_rate,\n",
-    "    cmap=\"magma\",\n",
-    ")\n",
-    "axs[n_plots - 1].vlines(\n",
-    "    rpt_bpks_times, 16, 480, color=\"linen\", linestyle=\"--\", linewidth=1.5, alpha=0.9\n",
-    ")\n",
-    "axs[n_plots - 1].set(title=f\"Algo : {type(algo).__name__}, Cost : l2\")\n",
-    "axs[n_plots - 1].label_outer()"
+    "for (segment_number, (start, end)) in enumerate(\n",
+    "    rpt.utils.pairwise([0] + bkps_time_indexes), start=1\n",
+    "):\n",
+    "    segment = signal[start:end]\n",
+    "    print(f\"Segment n°{segment_number} (duration: {segment.size/sampling_rate:.2f} s)\")\n",
+    "    display(Audio(data=segment, rate=sampling_rate))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Study each segment independently\n",
+    "## Conclusion\n",
     "\n",
-    "Each segment of the music can be characterized by a set of features."
+    "TODO"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "sampling_rate, bkps_times / sampling_rate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots(figsize=(8, 8))\n",
+    "## References\n",
     "\n",
-    "for (segment_number, segment) in enumerate(\n",
-    "    np.split(chromagram.T, rpt_bkps[:-1]), start=1\n",
-    "):\n",
-    "    ax.plot(segment.mean(axis=0), \"-*\", label=f\"Segment n°{segment_number}\")\n",
-    "_ = plt.legend()\n",
+    "<a id=\"Grosche2010\">[Grosche2010]</a>\n",
+    "Grosche, P., Müller, M., & Kurth, F. (2010). Cyclic tempogram - a mid-level tempo representation for music signals. Proceedings of the IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 5522–5525.\n",
     "\n",
-    "\n",
-    "bkps_times = (rpt_bpks_times * sampling_rate).astype(int)[1:]\n",
-    "for (segment_number, segment) in enumerate(np.split(y, bkps_times), start=1):\n",
-    "    print(f\"Segment n°{segment_number}\")\n",
-    "    display(Audio(data=segment, rate=sampling_rate))"
+    "<a id=\"McFee2015\">[McFee2015]</a>\n",
+    "McFee, B., Raffel, C., Liang, D., Ellis, D. P. W., McVicar, M., Battenberg, E., & Nieto, O. (2015). librosa: audio and music signal analysis in Python. Proceedings of the Python in Science Conference, 8, 18–25.\n"
    ]
   }
  ],
