--- a/docs/examples/music-segmentation.ipynb
+++ b/docs/examples/music-segmentation.ipynb
@@ -297,9 +297,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rpt-dev",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "rpt-dev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
