--- a/docs/examples/music-segmentation.ipynb
+++ b/docs/examples/music-segmentation.ipynb
@@ -59,9 +59,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fig_ax(figsize=(15, 5)):\n",
+    "def fig_ax(figsize=(15, 5), dpi=150):\n",
     "    \"\"\"Return a (matplotlib) figure and ax objects with given size.\"\"\"\n",
-    "    return plt.subplots(figsize=figsize)"
+    "    return plt.subplots(figsize=figsize, dpi=dpi)"
    ]
   },
   {
@@ -117,6 +117,7 @@
     "oenv = librosa.onset.onset_strength(\n",
     "    y=signal, sr=sampling_rate, hop_length=hop_length_tempo\n",
     ")\n",
+    "# Compute the tempogram\n",
     "tempogram = librosa.feature.tempogram(\n",
     "    onset_envelope=oenv,\n",
     "    sr=sampling_rate,\n",
@@ -154,7 +155,7 @@
     "In the change point detection setting, this heuritic consists in:\n",
     "\n",
     "- plotting the sum of costs for 1, 2,...,$K_{\\text{max}}$ change points,\n",
-    "- picking the number of changes at the \"elbow\" of the curve.\n",
+    "- picking the number of changes at the \"elbow\" of the curve (i.e. adding some additional change points gives a decreasing marginal gain on the sum of costs).\n",
     "\n",
     "Here, we set $K_{\\text{max}}$:=20.\n",
     "\n",
@@ -185,13 +186,13 @@
     "# Choose the number of changes (elbow heuristic)\n",
     "n_bkps_max = 20  # K_max\n",
     "# Start by computing the segmentation with most changes.\n",
-    "# After start, all segmentations with 1, 2,..., K_max-1 changes are available for free\n",
+    "# After start, all segmentations with 1, 2,..., K_max-1 changes are also available for free\n",
     "_ = algo.predict(n_bkps_max)\n",
     "\n",
     "array_of_n_bkps = np.arange(1, n_bkps_max + 1)\n",
     "\n",
     "\n",
-    "def get_sum_of_cost(n_bkps):\n",
+    "def get_sum_of_cost(algo, n_bkps):\n",
     "    bkps = algo.predict(n_bkps=n_bkps)\n",
     "    return algo.cost.sum_of_costs(bkps)\n",
     "\n",
@@ -199,7 +200,7 @@
     "fig, ax = fig_ax((7, 4))\n",
     "ax.plot(\n",
     "    array_of_n_bkps,\n",
-    "    [get_sum_of_cost(n_bkps=n_bkps) for n_bkps in array_of_n_bkps],\n",
+    "    [get_sum_of_cost(algo=algo, n_bkps=n_bkps) for n_bkps in array_of_n_bkps],\n",
     "    \"-*\",\n",
     "    alpha=0.5,\n",
     ")\n",
@@ -207,20 +208,24 @@
     "ax.set_xlabel(\"Number of change points\")\n",
     "ax.set_title(\"Sum of costs\")\n",
     "ax.grid(axis=\"x\")\n",
-    "ax.set_xlim(0, n_bkps_max)\n",
+    "ax.set_xlim(0, n_bkps_max + 1)\n",
     "\n",
     "# Visually we choose n_bkps=5 (highlighted in red on the elbow plot)\n",
     "n_bkps = 5\n",
-    "_ = ax.scatter([5], [get_sum_of_cost(n_bkps=5)], color=\"r\", s=100)"
+    "_ = ax.scatter([5], [get_sum_of_cost(algo=algo, n_bkps=5)], color=\"r\", s=100)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Results\n",
+    "\n",
     "**Visually, we choose 5 change points** (highlighted in red on the elbow plot).\n",
     "\n",
-    "We can now compute the segmentation of the tempogram, and display the results."
+    "We can now compute the segmentation of the tempogram, and display the results.\n",
+    "\n",
+    "### Display signal features and change points"
    ]
   },
   {
@@ -253,6 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Listen to the results\n",
     "We can now listen to the homogeneous segments (from a tempo standpoint) between two change points."
    ]
   },
@@ -262,6 +268,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Compute change points corresponding indexes in original signal\n",
     "bkps_time_indexes = (sampling_rate * bkps_times).astype(int).tolist()\n",
     "\n",
     "for (segment_number, (start, end)) in enumerate(\n",
@@ -273,12 +280,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Conclusion\n",
     "\n",
-    "TODO"
+    "Let's summarize what we have achieved with the present example: \n",
+    "\n",
+    "* We focused here on representing a music soundtrack according to its tempogram,\n",
+    "* We chose to detect mean shifts in the tempogram,\n",
+    "* We used the search method `rpt.KernelCPD` that allows to explore efficiently several values for the number of change points,\n",
+    "* We used the \"elbow\" heuritic to find the \"best\" number of change points.\n",
+    "\n",
+    "As a result, the best segmentation results in 6 segments (5 change points) that best describes the shifts in the mean of the soundtrack tempogram. This is what we see in the [Result](#results) section :\n",
+    "\n",
+    "* On the plot with both the tempogram and change points, we see that the computed segmentation captures homogeneous tempogram portions. When the intensity around the ~100BPM increases, the segment 3 captures it as compared as to segment 2. When high BPMs continuum enters the tempogram, again the algorithm captures it with segments 4 and 6,\n",
+    "* When listening to the resulting 6 segments, we can easily notice that they correspond to different rythmic portions of the soundtrack related to events of various instruments entering/exiting the play. \n",
+    "\n",
+    "Here we dealt only with pure instrumental music soundtrack in order to showcase `ruptures` capabilities on a music segmentation task. It would be interesting to try change point detection using `ruptures` on soundtracks with lyrics. Maybe it would require to introduce some different features like the chromagram or some other more specialized ones.  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Authors\n",
+    "\n",
+    "This example notebook has been authored by Olivier Boulant and edited by Charles Truong. "
    ]
   },
   {
@@ -297,9 +332,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ruptures",
    "language": "python",
-   "name": "python3"
+   "name": "ruptures"
   },
   "language_info": {
    "codemirror_mode": {
@@ -311,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.6.8-final"
   },
   "toc-autonumbering": false
  },
