docs(kernel-cpd-performance-comparison): typo

--- a/docs/examples/kernel-cpd-performance-comparison.ipynb
+++ b/docs/examples/kernel-cpd-performance-comparison.ipynb
@@ -113,7 +113,7 @@
     "bkps_python = algo_python.predict(n_bkps=n_bkps)\n",
     "bkps_c = algo_c.predict(n_bkps=n_bkps)\n",
     "print(f\"Python implementation:\\t{bkps_python}\")\n",
-    "print(f\"C implementation:\\t{bkps_python}\")\n",
+    "print(f\"C implementation:\\t{bkps_c}\")\n",
     "print(f\"(Hausdorff distance: {hausdorff(bkps_python, bkps_c):.0f} samples)\")"
    ]
   },
@@ -169,7 +169,7 @@
     "bkps_python = algo_python.predict(pen=penalty_value)\n",
     "bkps_c = algo_c.predict(pen=penalty_value)\n",
     "print(f\"Python implementation:\\t{bkps_python}\")\n",
-    "print(f\"C implementation:\\t{bkps_python}\")\n",
+    "print(f\"C implementation:\\t{bkps_c}\")\n",
     "print(f\"(Hausdorff distance: {hausdorff(bkps_python, bkps_c):.0f} samples)\")"
    ]
   },
@@ -240,7 +240,7 @@
     "bkps_python = algo_python.predict(n_bkps=n_bkps)\n",
     "bkps_c = algo_c.predict(n_bkps=n_bkps)\n",
     "print(f\"Python implementation:\\t{bkps_python}\")\n",
-    "print(f\"C implementation:\\t{bkps_python}\")\n",
+    "print(f\"C implementation:\\t{bkps_c}\")\n",
     "print(f\"(Hausdorff distance: {hausdorff(bkps_python, bkps_c):.0f} samples)\")"
    ]
   },
@@ -304,7 +304,7 @@
     "bkps_python = algo_python.predict(pen=penalty_value)\n",
     "bkps_c = algo_c.predict(pen=penalty_value)\n",
     "print(f\"Python implementation:\\t{bkps_python}\")\n",
-    "print(f\"C implementation:\\t{bkps_python}\")\n",
+    "print(f\"C implementation:\\t{bkps_c}\")\n",
     "print(f\"(Hausdorff distance: {hausdorff(bkps_python, bkps_c):.0f} samples)\")"
    ]
   },
