docs(music-example): fix reference link

--- a/docs/examples/music-segmentation.ipynb
+++ b/docs/examples/music-segmentation.ipynb
@@ -18,9 +18,9 @@
     "- the original sound is transformed into an informative (multivariate) representation;\n",
     "- mean shifts are detected in this new representation using a dynamic programming approach.\n",
     "\n",
-    "In this example, we use the well-known tempogram representation, which is based on the onset strength envelope of the input signal, and captures the tempo spectrum [[Grosche2010]](Grosche2010).\n",
+    "In this example, we use the well-known tempogram representation, which is based on the onset strength envelope of the input signal, and captures the tempo spectrum [[Grosche2010]](#Grosche2010).\n",
     "\n",
-    "To load and manipulate sound data, we use the [librosa package](https://librosa.org/doc/latest/index.html) [[McFee2015]](McFee2015)."
+    "To load and manipulate sound data, we use the [librosa package](https://librosa.org/doc/latest/index.html) [[McFee2015]](#McFee2015)."
    ]
   },
   {
