--- a/docs/examples/music-segmentation.ipynb
+++ b/docs/examples/music-segmentation.ipynb
@@ -11,22 +11,18 @@
     "## Introduction\n",
     "\n",
     "Music segmentation can be seen as a change point detection task and therefore can be carried out with `ruptures`.\n",
-    "Roughly, it consists in finding the temporal boundaries of homogeneous segments, e.g. the intro, verse, chorus and outro in a song.\n",
+    "Roughly, it consists in finding the temporal boundaries of meaningful sections, e.g. the intro, verse, chorus and outro in a song.\n",
+    "This is an important task in the filed of music information retrieval.\n",
     "\n",
     "The adopted approach is summarized as follows:\n",
     "\n",
     "- the original sound is transformed into an informative (multivariate) representation;\n",
     "- mean shifts are detected in this new representation using a dynamic programming approach.\n",
     "\n",
-    "In this example, we use the well-known tempogram representation, which is based on the onset strength envelope of the input signal, and captures the tempo spectrum [[Grosche2010]](#Grosche2010).\n",
+    "In this example, we use the well-known tempogram representation, which is based on the onset strength envelope of the input signal, and captures tempo information [[Grosche2010]](#Grosche2010).\n",
     "\n",
-    "To load and manipulate sound data, we use the [librosa package](https://librosa.org/doc/latest/index.html) [[McFee2015]](#McFee2015)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "To load and manipulate sound data, we use the [librosa package](https://librosa.org/doc/latest/index.html) [[McFee2015]](#McFee2015).\n",
+    "\n",
     "### Setup\n",
     "\n",
     "First, we make the necessary imports."
@@ -103,7 +99,9 @@
    "source": [
     "## Signal segmentation\n",
     "\n",
-    "### Transform the signal into a tempogram"
+    "### Transform the signal into a tempogram\n",
+    "\n",
+    "The tempogram measures the tempo (measured in Beats Per Minute, BPM) profile along the time axis."
    ]
   },
   {
@@ -139,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Choice of the detection algorithm\n",
+    "### Detection algorithm\n",
     "\n",
     "We choose to detect changes in the mean of the tempogram, which is a multivariate signal.\n",
     "This amounts to selecting the $L_2$ cost function (see [CostL2](../../user-guide/costs/costl2)).\n",
@@ -150,12 +148,14 @@
     "\n",
     "Both will return the same results but the latter is implemented in C and therefore significatively faster.\n",
     "\n",
-    "### Choice of the number of changes\n",
+    "### Number of changes\n",
     "In order to choose the number of change points, we use the elbow method.\n",
     "In the change point detection setting, this heuritic consists in:\n",
     "\n",
     "- plotting the sum of costs for 1, 2,...,$K_{\\text{max}}$ change points,\n",
-    "- picking the number of changes at the \"elbow\" of the curve (i.e. adding some additional change points gives a decreasing marginal gain on the sum of costs).\n",
+    "- picking the number of changes at the \"elbow\" of the curve.\n",
+    "\n",
+    "Intuitively, adding change points beyond the \"elbow\" only provides a marginal decrease of the sum of costs.\n",
     "\n",
     "Here, we set $K_{\\text{max}}$:=20.\n",
     "\n",
@@ -186,13 +186,14 @@
     "# Choose the number of changes (elbow heuristic)\n",
     "n_bkps_max = 20  # K_max\n",
     "# Start by computing the segmentation with most changes.\n",
-    "# After start, all segmentations with 1, 2,..., K_max-1 changes are also available for free\n",
+    "# After start, all segmentations with 1, 2,..., K_max-1 changes are also available for free.\n",
     "_ = algo.predict(n_bkps_max)\n",
     "\n",
     "array_of_n_bkps = np.arange(1, n_bkps_max + 1)\n",
     "\n",
     "\n",
-    "def get_sum_of_cost(algo, n_bkps):\n",
+    "def get_sum_of_cost(algo, n_bkps) -> float:\n",
+    "    \"\"\"Return the sum of costs for the change points `bkps`\"\"\"\n",
     "    bkps = algo.predict(n_bkps=n_bkps)\n",
     "    return algo.cost.sum_of_costs(bkps)\n",
     "\n",
@@ -219,13 +220,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Results\n",
-    "\n",
     "**Visually, we choose 5 change points** (highlighted in red on the elbow plot).\n",
     "\n",
-    "We can now compute the segmentation of the tempogram, and display the results.\n",
     "\n",
-    "### Display signal features and change points"
+    "### Results\n",
+    "\n",
+    "The tempogram can now be segmented into homogeous (from a tempo standpoint) portions.\n",
+    "The results are show in the following figure."
    ]
   },
   {
@@ -258,8 +259,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Listen to the results\n",
-    "We can now listen to the homogeneous segments (from a tempo standpoint) between two change points."
+    "Visually, the estimated change points indeed separate portions of signal with a relatively constant tempo profile.\n",
+    "Going back to the original music signal, this intuition can be verified by listening to the indivudal segments defined by the changes points."
    ]
   },
   {
@@ -280,11 +281,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The first segment corresponds to the soundless part of the signal (visible on the plot of the signal enveloppe).\n",
+    "The following segments correspond to different rythmic portions of the soundtrack and the associated change points occur when various instruments enter or exit the play."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -292,19 +294,12 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "Let's summarize what we have achieved with the present example: \n",
+    "This example shows how to apply `ruptures` on a music segmentation task.\n",
+    "More precisely, we detected mean shifts on a well-suited representation (the tempogram) of a music signal.\n",
+    "The number of changes was heuristically determined (with the \"elbow\" method) and the results agreed with visually and auditory intuition.\n",
     "\n",
-    "* We focused here on representing a music soundtrack according to its tempogram,\n",
-    "* We chose to detect mean shifts in the tempogram,\n",
-    "* We used the search method `rpt.KernelCPD` that allows to explore efficiently several values for the number of change points,\n",
-    "* We used the \"elbow\" heuritic to find the \"best\" number of change points.\n",
-    "\n",
-    "As a result, the best segmentation results in 6 segments (5 change points) that best describes the shifts in the mean of the soundtrack tempogram. This is what we see in the [Result](#results) section :\n",
-    "\n",
-    "* On the plot with both the tempogram and change points, we see that the computed segmentation captures homogeneous tempogram portions. When the intensity around the ~100BPM increases, the segment 3 captures it as compared as to segment 2. When high BPMs continuum enters the tempogram, again the algorithm captures it with segments 4 and 6,\n",
-    "* When listening to the resulting 6 segments, we can easily notice that they correspond to different rythmic portions of the soundtrack related to events of various instruments entering/exiting the play. \n",
-    "\n",
-    "Here we dealt only with pure instrumental music soundtrack in order to showcase `ruptures` capabilities on a music segmentation task. It would be interesting to try change point detection using `ruptures` on soundtracks with lyrics. Maybe it would require to introduce some different features like the chromagram or some other more specialized ones.  \n"
+    "Such results can then be used to characterize the structure of music and songs, for music classification, recommandation, instrument recognition, etc.\n",
+    "This procedure could also be enriched with other musically relevant representations (e.g. the chromagram) to detect other types of changes."
    ]
   },
   {
@@ -326,15 +321,15 @@
     "Grosche, P., Müller, M., & Kurth, F. (2010). Cyclic tempogram - a mid-level tempo representation for music signals. Proceedings of the IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 5522–5525.\n",
     "\n",
     "<a id=\"McFee2015\">[McFee2015]</a>\n",
-    "McFee, B., Raffel, C., Liang, D., Ellis, D. P. W., McVicar, M., Battenberg, E., & Nieto, O. (2015). librosa: audio and music signal analysis in Python. Proceedings of the Python in Science Conference, 8, 18–25.\n"
+    "McFee, B., Raffel, C., Liang, D., Ellis, D. P. W., McVicar, M., Battenberg, E., & Nieto, O. (2015). Librosa: audio and music signal analysis in Python. Proceedings of the Python in Science Conference, 8, 18–25.\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ruptures",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ruptures"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -346,9 +341,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8-final"
+   "version": "3.9.1"
   },
-  "toc-autonumbering": false
+  "toc-autonumbering": false,
+  "toc-showmarkdowntxt": false
  },
  "nbformat": 4,
  "nbformat_minor": 4
