--- a/docs/examples/kernel-cpd-performance-comparison.ipynb
+++ b/docs/examples/kernel-cpd-performance-comparison.ipynb
@@ -47,11 +47,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt  # for display purposes\n",
     "import time  # for execution time comparison\n",
+    "\n",
+    "import matplotlib.pyplot as plt  # for display purposes\n",
     "import ruptures as rpt  # our package\n",
     "from ruptures.metrics import hausdorff\n",
-    "\n",
     "\n",
     "# generate signal\n",
     "n_samples, dim, sigma = 500, 3, 3\n",
@@ -113,7 +113,7 @@
     "bkps_python = algo_python.predict(n_bkps=n_bkps)\n",
     "bkps_c = algo_c.predict(n_bkps=n_bkps)\n",
     "print(f\"Python implementation:\\t{bkps_python}\")\n",
-    "print(f\"C implementation:\\t{bkps_python}\")\n",
+    "print(f\"C implementation:\\t{bkps_c}\")\n",
     "print(f\"(Hausdorff distance: {hausdorff(bkps_python, bkps_c):.0f} samples)\")"
    ]
   },
@@ -169,7 +169,7 @@
     "bkps_python = algo_python.predict(pen=penalty_value)\n",
     "bkps_c = algo_c.predict(pen=penalty_value)\n",
     "print(f\"Python implementation:\\t{bkps_python}\")\n",
-    "print(f\"C implementation:\\t{bkps_python}\")\n",
+    "print(f\"C implementation:\\t{bkps_c}\")\n",
     "print(f\"(Hausdorff distance: {hausdorff(bkps_python, bkps_c):.0f} samples)\")"
    ]
   },
@@ -240,7 +240,7 @@
     "bkps_python = algo_python.predict(n_bkps=n_bkps)\n",
     "bkps_c = algo_c.predict(n_bkps=n_bkps)\n",
     "print(f\"Python implementation:\\t{bkps_python}\")\n",
-    "print(f\"C implementation:\\t{bkps_python}\")\n",
+    "print(f\"C implementation:\\t{bkps_c}\")\n",
     "print(f\"(Hausdorff distance: {hausdorff(bkps_python, bkps_c):.0f} samples)\")"
    ]
   },
@@ -304,7 +304,7 @@
     "bkps_python = algo_python.predict(pen=penalty_value)\n",
     "bkps_c = algo_c.predict(pen=penalty_value)\n",
     "print(f\"Python implementation:\\t{bkps_python}\")\n",
-    "print(f\"C implementation:\\t{bkps_python}\")\n",
+    "print(f\"C implementation:\\t{bkps_c}\")\n",
     "print(f\"(Hausdorff distance: {hausdorff(bkps_python, bkps_c):.0f} samples)\")"
    ]
   },
