--- a/docs/examples/music-segmentation.ipynb
+++ b/docs/examples/music-segmentation.ipynb
@@ -285,7 +285,7 @@
    "metadata": {},
    "source": [
     "The first segment corresponds to the soundless part of the signal (visible on the plot of the signal enveloppe).\n",
-    "The following segments correspond to different rythmic portions of the soundtrack and the associated change points occur when various instruments enter or exit the play."
+    "The following segments correspond to different rythmic portions and the associated change points occur when various instruments enter or exit the play."
    ]
   },
   {
