--- a/docs/examples/music-segmentation.ipynb
+++ b/docs/examples/music-segmentation.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "Music segmentation can be seen as a change point detection task and therefore can be carried out with `ruptures`.\n",
     "Roughly, it consists in finding the temporal boundaries of meaningful sections, e.g. the intro, verse, chorus and outro in a song.\n",
-    "This is an important task in the filed of music information retrieval.\n",
+    "This is an important task in the field of music information retrieval.\n",
     "\n",
     "The adopted approach is summarized as follows:\n",
     "\n",
