Add work in progress notebooks for various approaches

--- a/docs/examples/text-segmentation-emb.ipynb
+++ b/docs/examples/text-segmentation-emb.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Replicate [Choi](https://www.aclweb.org/anthology/A00-2004.pdf)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -17,18 +10,17 @@
     "import ruptures as rpt  # our package\n",
     "from os.path import join\n",
     "import matplotlib.pyplot as plt\n",
+    "import itertools\n",
     "\n",
-    "\n",
+    "import re\n",
+    "import string\n",
     "import nltk\n",
-    "from nltk.corpus import stopwords\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.stem import PorterStemmer\n",
+    "from nltk.corpus import stopwords\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
-    "nltk.download(\"stopwords\")\n",
-    "nltk.download(\"punkt\")\n",
-    "import string\n",
-    "import re\n",
-    "from sklearn.feature_extraction.text import CountVectorizer"
+    "from gensim.models import Word2Vec"
    ]
   },
   {
@@ -79,7 +71,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "original, preprocessed = read_datafile(data_path, \"0.ref\")"
+    "original, bkps, preprocessed = read_datafile(data_path, \"0.ref\")\n",
+    "bkps\n",
+    "n_sentences = len(preprocessed)"
    ]
   },
   {
@@ -88,7 +82,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(preprocessed)"
+    "emb_dims = 20\n",
+    "word2vec = Word2Vec(sentences=preprocessed, min_count=2, size=emb_dims, window=10)\n",
+    "word2vec.train(\n",
+    "    preprocessed, total_examples=word2vec.corpus_count, epochs=word2vec.epochs\n",
+    ")  # train word vectors"
    ]
   },
   {
@@ -97,21 +95,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cosine_similarity(s1: str, s2: str):\n",
-    "    print(s1)\n",
-    "    s1_set = set(s1)\n",
-    "    s2_set = set(s2)\n",
-    "    word_set = s1_set.union(s2_set)\n",
-    "    f1 = np.zeros((len(word_set),))\n",
-    "    f2 = np.zeros((len(word_set),))\n",
-    "    for i, word in enumerate(word_set):\n",
-    "        print(i)\n",
-    "        print(word)\n",
-    "        if word in s1_set:\n",
-    "            f1[i] = 1.0\n",
-    "        if word in s2_set:\n",
-    "            f2[i] = 1.0\n",
-    "    print(word_set)"
+    "vocab_keys = word2vec.wv.vocab.keys()\n",
+    "in_vocab = [el for el in preprocessed[0] if el in vocab_keys]\n",
+    "mean = np.zeros((1, emb_dims))\n",
+    "for el in in_vocab:\n",
+    "    mean = mean + word2vec.wv[el].reshape(1, -1)\n",
+    "mean = mean / len(in_vocab)"
    ]
   },
   {
@@ -120,16 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cosine_similarity_sk(s1: str, s2: str):\n",
-    "    corpus = [\n",
-    "        \" \".join(s1),\n",
-    "        \" \".join(s2),\n",
-    "    ]\n",
-    "    vectorizer = CountVectorizer()\n",
-    "    X = vectorizer.fit_transform(corpus).toarray()\n",
-    "    cosine = np.sum(X[0, :] * X[1, :])\n",
-    "    cosine = cosine / (np.sum(X[0, :] * X[0, :]) * np.sum(X[1, :] * X[1, :])) ** 0.5\n",
-    "    return cosine"
+    "mean"
    ]
   },
   {
@@ -138,7 +118,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bla = cosine_similarity_sk(preprocessed[-1], preprocessed[-1])"
+    "def get_embeddings_mean(word2vec_model, sentence):\n",
+    "    mean = np.zeros((1, emb_dims))\n",
+    "    vocab_keys = word2vec.wv.vocab.keys()\n",
+    "    in_vocab = [el for el in sentence if el in vocab_keys]\n",
+    "    if len(in_vocab) == 0:\n",
+    "        return np.full((1, emb_dims), np.nan)\n",
+    "    for el in in_vocab:\n",
+    "        mean = mean + word2vec.wv[el].reshape(1, -1)\n",
+    "    return mean / len(in_vocab)"
    ]
   },
   {
@@ -147,29 +135,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bla"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_sentences = len(preprocessed)\n",
-    "similarities = np.zeros((n_sentences, n_sentences))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "res = np.zeros((n_sentences, emb_dims))\n",
     "for i in np.arange(n_sentences):\n",
-    "    for j in np.arange(i, n_sentences):\n",
-    "        similarities[i, j] = cosine_similarity_sk(preprocessed[i], preprocessed[j])\n",
-    "        similarities[j, i] = similarities[i, j]"
+    "    res[i, :] = get_embeddings_mean(word2vec, preprocessed[i])"
    ]
   },
   {
@@ -178,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(similarities)\n",
+    "plt.imshow(res)\n",
     "plt.show()"
    ]
   },
@@ -188,19 +156,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# rank\n",
-    "def get_rank(matrix: np.array, vicinity: int):\n",
-    "    res = np.zeros(matrix.shape)\n",
-    "    n_lines, n_columns = matrix.shape\n",
-    "    for i in np.arange(n_lines):\n",
-    "        for j in np.arange(i, n_columns):\n",
-    "            sub_matrix = matrix[\n",
-    "                max(0, i - vicinity) : min(i + vicinity, n_lines),\n",
-    "                max(0, j - vicinity) : min(j + vicinity, n_columns),\n",
-    "            ]\n",
-    "            res[i, j] = np.sum(np.where(sub_matrix < matrix[i, j]))\n",
-    "            res[j, i] = res[i, j]\n",
-    "    return res"
+    "n_bkps = 9\n",
+    "algo = rpt.KernelCPD(kernel=\"linear\", min_size=1, jump=1).fit(res)  # written in C\n",
+    "result = algo.predict(n_bkps=n_bkps)"
    ]
   },
   {
@@ -209,7 +167,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "similarities_rank = get_rank(similarities, 3)"
+    "print(result)\n",
+    "print(bkps)"
    ]
   },
   {
@@ -218,17 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "similarities_rank.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(similarities_rank)\n",
-    "plt.show()"
+    "fig, ax_array = rpt.display(res, bkps, result)"
    ]
   },
   {
@@ -241,9 +190,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ruptures",
-   "language": "python",
-   "name": "ruptures"
+   "display_name": "Python 3.6.8 64-bit ('ruptures': venv)",
+   "metadata": {
+    "interpreter": {
+     "hash": "ba80f8bb6ed98fea8517dcb0f4e555fabb5e327f543d451dbff1b173f9c53678"
+    }
+   },
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
