--- a/docs/examples/text-segmentation-adjacent.ipynb
+++ b/docs/examples/text-segmentation-adjacent.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Replicate [Choi](https://www.aclweb.org/anthology/A00-2004.pdf)"
+    "Replicate [Hearst](https://citeseerx.ist.psu.edu/viewdoc/download;jsessionid=D4FEFBD122DADCCB8F551299C6E99D29?doi=10.1.1.35.4491&rep=rep1&type=pdf)"
    ]
   },
   {
@@ -17,17 +17,14 @@
     "import ruptures as rpt  # our package\n",
     "from os.path import join\n",
     "import matplotlib.pyplot as plt\n",
+    "import itertools\n",
     "\n",
-    "\n",
+    "import re\n",
+    "import string\n",
     "import nltk\n",
-    "from nltk.corpus import stopwords\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.stem import PorterStemmer\n",
-    "\n",
-    "nltk.download(\"stopwords\")\n",
-    "nltk.download(\"punkt\")\n",
-    "import string\n",
-    "import re\n",
+    "from nltk.corpus import stopwords\n",
     "from sklearn.feature_extraction.text import CountVectorizer"
    ]
   },
@@ -79,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "original, preprocessed = read_datafile(data_path, \"0.ref\")"
+    "original, bkps, preprocessed = read_datafile(data_path, \"0.ref\")"
    ]
   },
   {
@@ -88,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(preprocessed)"
+    "bkps"
    ]
   },
   {
@@ -97,30 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cosine_similarity(s1: str, s2: str):\n",
-    "    print(s1)\n",
-    "    s1_set = set(s1)\n",
-    "    s2_set = set(s2)\n",
-    "    word_set = s1_set.union(s2_set)\n",
-    "    f1 = np.zeros((len(word_set),))\n",
-    "    f2 = np.zeros((len(word_set),))\n",
-    "    for i, word in enumerate(word_set):\n",
-    "        print(i)\n",
-    "        print(word)\n",
-    "        if word in s1_set:\n",
-    "            f1[i] = 1.0\n",
-    "        if word in s2_set:\n",
-    "            f2[i] = 1.0\n",
-    "    print(word_set)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cosine_similarity_sk(s1: str, s2: str):\n",
+    "def cosine_similarity_sk(s1: list, s2: list):\n",
     "    corpus = [\n",
     "        \" \".join(s1),\n",
     "        \" \".join(s2),\n",
@@ -157,7 +131,24 @@
    "outputs": [],
    "source": [
     "n_sentences = len(preprocessed)\n",
-    "similarities = np.zeros((n_sentences, n_sentences))"
+    "blocksize = 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "res = np.zeros((n_sentences,))\n",
+    "for i in np.arange(blocksize - 1, n_sentences - blocksize):\n",
+    "    left_block = preprocessed[i - blocksize + 1 : i + 1]\n",
+    "    right_block = preprocessed[i + 1 : i + 1 + blocksize]\n",
+    "    res[i] = cosine_similarity_sk(\n",
+    "        list(itertools.chain(*left_block)), list(itertools.chain(*right_block))\n",
+    "    )"
    ]
   },
   {
@@ -166,10 +157,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in np.arange(n_sentences):\n",
-    "    for j in np.arange(i, n_sentences):\n",
-    "        similarities[i, j] = cosine_similarity_sk(preprocessed[i], preprocessed[j])\n",
-    "        similarities[j, i] = similarities[i, j]"
+    "n_bkps = 9\n",
+    "algo = rpt.KernelCPD(kernel=\"linear\", min_size=blocksize, jump=1).fit(\n",
+    "    res[blocksize - 1 : -blocksize - 1]\n",
+    ")  # written in C\n",
+    "result = algo.predict(n_bkps=n_bkps)"
    ]
   },
   {
@@ -178,8 +170,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(similarities)\n",
-    "plt.show()"
+    "result = [el + blocksize - 1 for el in result]\n",
+    "print(result)\n",
+    "print(bkps)"
    ]
   },
   {
@@ -188,19 +181,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# rank\n",
-    "def get_rank(matrix: np.array, vicinity: int):\n",
-    "    res = np.zeros(matrix.shape)\n",
-    "    n_lines, n_columns = matrix.shape\n",
-    "    for i in np.arange(n_lines):\n",
-    "        for j in np.arange(i, n_columns):\n",
-    "            sub_matrix = matrix[\n",
-    "                max(0, i - vicinity) : min(i + vicinity, n_lines),\n",
-    "                max(0, j - vicinity) : min(j + vicinity, n_columns),\n",
-    "            ]\n",
-    "            res[i, j] = np.sum(np.where(sub_matrix < matrix[i, j]))\n",
-    "            res[j, i] = res[i, j]\n",
-    "    return res"
+    "print(len(bkps))\n",
+    "print(len(result))"
    ]
   },
   {
@@ -209,26 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "similarities_rank = get_rank(similarities, 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "similarities_rank.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(similarities_rank)\n",
-    "plt.show()"
+    "fig, ax_array = rpt.display(res, bkps, result)"
    ]
   },
   {
