docs: image path

--- a/docs/examples/text-segmentation.ipynb
+++ b/docs/examples/text-segmentation.ipynb
@@ -16,13 +16,13 @@
     "\n",
     "### Data\n",
     "\n",
-    "We use the [[Choi Dataset](#ChoiDataset)]. It is a widely used reference dataset to test whether a segmentation algorithm can separate a written text into several meaningfull topic units. Each data file concatenates the first `n` sentences from ten different documents chosen at random from a 124 documents subset of the [[Brown Corpus](#BrownCorpus)] (the ca\\**.pos and cj\\**.pos sets). \n",
+    "We use the [[Choi Dataset](#ChoiDataset)]. It is a widely used reference dataset to test whether a segmentation algorithm can separate a written text into several meaningfull topic units. Each data file concatenates the first $n$ sentences from ten different documents chosen at random from a 124 documents subset of the [[Brown Corpus](#BrownCorpus)] (the ca\\**.pos and cj\\**.pos sets). \n",
     "\n",
-    "In order to evaluate the true power of the Linear Text Segmentation algorithm, `n` is randomly chosen within a range and there are several option offered by the [[Choi Dataset](#ChoiDataset)]. Here is an example of what the data might look like for $n \\in [3–5]$\n",
+    "In order to evaluate the true power of the Linear Text Segmentation algorithm, $n$ is randomly chosen within a range and there are several option offered by the [[Choi Dataset](#ChoiDataset)]. Here is an example of what the data might look like for $n \\in [3–5]$\n",
     "\n",
-    "<center>\n",
-    "<img src=\"../images/choi_example.png\" alt=\"Choi Dataset Snapshot\" width=\"50%\"/>\n",
-    "</center>\n",
+    "<p align=\"center\">\n",
+    "  <img width=\"50%\" src=\"/images/choi_example.png\">\n",
+    "</p>\n",
     "\n",
     "In the current example, we choose $n \\in [9–11]$, meaning the dataset will be the concatenation of 9 to 11 consecutives sentences from ten different documents. \n",
     "\n",
@@ -58,8 +58,9 @@
     "from nltk.stem import PorterStemmer\n",
     "from nltk.tokenize import word_tokenize\n",
     "from ruptures.base import BaseCost  # To create custom cost\n",
-    "from sklearn.feature_extraction.text import \\\n",
-    "    CountVectorizer  # For counting word frequency"
+    "from sklearn.feature_extraction.text import (\n",
+    "    CountVectorizer,\n",
+    ")  # For counting word frequency"
    ]
   },
   {
@@ -242,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = fig_ax((5, 5))\n",
+    "fig, ax = fig_ax((4, 4))\n",
     "plt.imshow(-np.log(similarities), cmap=cm.plasma)\n",
     "ax.set_title(\"Cosine similarities matrix\", fontsize=10)\n",
     "ax.set_xlabel(\"Sentence index\", fontsize=8)\n",
@@ -390,7 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = fig_ax((5, 5))\n",
+    "fig, ax = fig_ax((4, 4))\n",
     "boundaries_width = 0.8\n",
     "previous_bkp = 0\n",
     "linestyle = \"dashed\"\n",
