docs: minor adjustments

--- a/docs/examples/text-segmentation.ipynb
+++ b/docs/examples/text-segmentation.ipynb
@@ -116,9 +116,9 @@
     "        filename (str): full path the data file\n",
     "\n",
     "    Returns:\n",
-    "        original (list): list of sentences, original data without preprocessing applied\n",
+    "        original (list): list of sentences, original data\n",
     "        bkps (list): sorted list of breakpoints\n",
-    "        preprocessed (list): list of sentences, once preprocessing has been applied\n",
+    "        preprocessed (list): list of sentences, after preprocessing\n",
     "    \"\"\"\n",
     "    original = []\n",
     "    preprocessed = []\n",
@@ -162,7 +162,7 @@
     "n_sentences = len(preprocessed)\n",
     "n_bkps = len(bkps) - 1\n",
     "\n",
-    "print(f\"There are {n_sentences} sentences to be seperated into {n_bkps + 1} segments\")"
+    "print(f\"There are {n_sentences} sentences to be seperated into {n_bkps+1} segments\")"
    ]
   },
   {
@@ -325,11 +325,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We use the [Dynamic Programming](../../user-guide/detection/dynp) search method since it has the two following nice properties :\n",
+    "\n",
+    "* It finds **optimal** boundaries\n",
+    "* It allows full modularity and can run with a [Custom Cost](../../user-guide/costs/costcustom) (the [KernelCPD](../../user-guide/detection/kernelcpd) search method implemented in C only allows for a pre-implemented list of kernels and those do not support natively a similarity matrix as an input)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create the object and run the algorythm\n",
     "algo = rpt.Dynp(custom_cost=MyCost(), min_size=2, jump=1).fit(similarities)\n",
     "result = algo.predict(n_bkps=n_bkps)"
    ]
@@ -359,15 +370,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "nb_char = 60  # configure line character width\n",
+    "\n",
+    "# Initialize some counters\n",
     "c_real_bkps_idx = 0\n",
     "c_computed_bkps_icx = 0\n",
     "line_counter = 1\n",
-    "nb_char = 60\n",
+    "\n",
     "for i, sentence in enumerate(original):\n",
     "    if i == bkps[c_real_bkps_idx]:\n",
+    "        # Display real boundaries\n",
     "        print(f\"\\n\\t{'='*nb_char}\\n\")\n",
     "        c_real_bkps_idx += 1\n",
     "    if i == result[c_computed_bkps_icx]:\n",
+    "        # Display computed boundaries\n",
     "        print(f\"\\t{'*' *nb_char}\")\n",
     "        c_computed_bkps_icx += 1\n",
     "    sentence_wrap = textwrap.wrap(\n",
@@ -391,28 +407,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = fig_ax((4, 4))\n",
-    "boundaries_width = 0.8\n",
+    "fig, ax = fig_ax((4, 4))  # creates figure\n",
     "previous_bkp = 0\n",
-    "linestyle = \"dashed\"\n",
-    "color = \"black\"\n",
+    "\n",
     "for c_bpks in result:\n",
     "    c_bpks -= 1\n",
     "    ax.vlines(\n",
     "        [c_bpks, previous_bkp],\n",
     "        previous_bkp,\n",
     "        c_bpks,\n",
-    "        color=color,\n",
-    "        linestyles=linestyle,\n",
-    "        linewidth=boundaries_width,\n",
+    "        color=\"black\",\n",
+    "        linestyles=\"dashed\",\n",
+    "        linewidth=0.8,\n",
     "    )\n",
     "    ax.hlines(\n",
     "        [c_bpks, previous_bkp],\n",
     "        previous_bkp,\n",
     "        c_bpks,\n",
-    "        color=color,\n",
-    "        linestyles=linestyle,\n",
-    "        linewidth=boundaries_width,\n",
+    "        color=\"black\",\n",
+    "        linestyles=\"dashed\",\n",
+    "        linewidth=0.8,\n",
     "    )\n",
     "    previous_bkp = c_bpks\n",
     "plt.imshow(-np.log(similarities), cmap=cm.plasma)\n",
